25.10 (ws)
      - make dynamics text editable
      - fix "reset positions" for stems
      - make repeat expansion more robust
      - in nested repeats repeat inner repeat only on first pass of
        outer repeat
24.10 (ws)
      - fixes for TextLine properties
      - fixed: line disappeared when right click with mouse in line edit mode
      - fixed "disappearing play panel"
      - fixes for cross staff beams
23.10 (ws)
      - implemented editable beams
21.10 (ws)
      - resize score if canvas geometry is changed (example: palette on/off)
        and mag is set to "page width" or similar.
      - fix tuplet regression
      - small fixes for hairpin edit mode
20.10 (ws)
      - page settings: "Space" spinbox minimum value set from 0.101 to 0.001
      - new italian translation from Contardi Angelo
      - tried to fix tenor clef
      - fixed bug in volta edit mode
      - moved "state" from MuseScore to Score class; every Score() now has its own
        Canvas(), to preserves edit states. This fixes some crashes when switching
        scores while one score is in edit mode.
19.10 (ws)
      - make character palette (F2) moveable in windows version
      (sy)
      - lengthened stems for hooked notes when "short stems" are used in multi-voice measures
18.10 (ws)
      - Implemented vertical spacer elements. Drag from "breaks/spacer" palette
        onto measure. Height can be adjusted in edit mode.
      - beaming of notes with grace notes now possible
      - fixed crash when deleting lasso selection of last measure
17.10 (ws)
      - changed buildin score font type form *.otf to *.ttf. The *ttf fonts seem to
        work better on windows.
      (sy)
      - fixed saving voice stem directions to style
      - changed shift amounts for element position adjustment using keyboard: with no modifier,
        it moves 10.0, and with Ctrl it moves 1.0, with Alt it moves 0.1
      - added keyboard shortcut Ctrl+E to enter edit mode on the selected element